Correção de exibição de erros.